@@ -22,14 +22,13 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.Stack;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 import eu.stratosphere.nephele.configuration.Configuration;
 import eu.stratosphere.nephele.execution.Environment;
-import eu.stratosphere.nephele.execution.ExecutionNotifiable;
+import eu.stratosphere.nephele.execution.ExecutionListener;
 import eu.stratosphere.nephele.execution.ExecutionSignature;
 import eu.stratosphere.nephele.execution.ExecutionState;
 import eu.stratosphere.nephele.instance.AbstractInstance;
@@ -52,7 +51,6 @@ import eu.stratosphere.nephele.jobgraph.JobFileOutputVertex;
 import eu.stratosphere.nephele.jobgraph.JobGraph;
 import eu.stratosphere.nephele.jobgraph.JobID;
 import eu.stratosphere.nephele.jobgraph.JobInputVertex;
-import eu.stratosphere.nephele.jobgraph.JobStatus;
 import eu.stratosphere.nephele.template.AbstractInvokable;
 import eu.stratosphere.nephele.template.IllegalConfigurationException;
 import eu.stratosphere.nephele.types.Record;
@@ -66,7 +64,7 @@ import eu.stratosphere.nephele.util.StringUtils;
  * 
  * @author warneke
  */
-public class ExecutionGraph implements ExecutionNotifiable {
+public class ExecutionGraph implements ExecutionListener {
 
 	/**
 	 * The log object used for debugging.
@@ -116,7 +114,12 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	/**
 	 * The current status of the job which is represented by this execution graph.
 	 */
-	private JobStatus jobStatus = JobStatus.CREATED;
+	private InternalJobStatus jobStatus = InternalJobStatus.CREATED;
+
+	/**
+	 * The error description of the first task which causes this job to fail.
+	 */
+	private volatile String errorDescription = null;
 
 	/**
 	 * List of listeners which are notified in case the status of this job has changed.
@@ -164,17 +167,20 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	private void applyUserDefinedSettings(HashMap<AbstractJobVertex, ExecutionGroupVertex> temporaryGroupVertexMap)
 			throws GraphConversionException {
 
-		// TODO: Check for cycles in the instance dependency chain
+		// The check for cycles in the dependency chain for instance sharing is already checked in
+		// <code>submitJob</code> method of the job manager
 
 		// If there is no cycle, apply the settings to the corresponding group vertices
-		Iterator<AbstractJobVertex> it = temporaryGroupVertexMap.keySet().iterator();
+		final Iterator<Map.Entry<AbstractJobVertex, ExecutionGroupVertex>> it = temporaryGroupVertexMap.entrySet()
+			.iterator();
 		while (it.hasNext()) {
 
-			final AbstractJobVertex jobVertex = it.next();
+			final Map.Entry<AbstractJobVertex, ExecutionGroupVertex> entry = it.next();
+			final AbstractJobVertex jobVertex = entry.getKey();
 			if (jobVertex.getVertexToShareInstancesWith() != null) {
 
 				final AbstractJobVertex vertexToShareInstancesWith = jobVertex.getVertexToShareInstancesWith();
-				final ExecutionGroupVertex groupVertex = temporaryGroupVertexMap.get(jobVertex);
+				final ExecutionGroupVertex groupVertex = entry.getValue();
 				final ExecutionGroupVertex groupVertexToShareInstancesWith = temporaryGroupVertexMap
 					.get(vertexToShareInstancesWith);
 				groupVertex.shareInstancesWith(groupVertexToShareInstancesWith);
@@ -214,7 +220,6 @@ public class ExecutionGraph implements ExecutionNotifiable {
 		while (it2.hasNext()) {
 			final ExecutionGroupVertex groupVertex = it2.next();
 			if (groupVertex.getVertexToShareInstancesWith() == null) {
-				System.out.println("Finally calling reassign instances for " + groupVertex.getName());
 				groupVertex.reassignInstances();
 				this.repairInstanceAssignment();
 			}
@@ -406,7 +411,6 @@ public class ExecutionGraph implements ExecutionNotifiable {
 			throws GraphConversionException {
 
 		// Unwire the respective gate of the source vertices
-		System.out.println("Number of sources (" + source.getName() + "): " + source.getCurrentNumberOfGroupMembers());
 		for (int i = 0; i < source.getCurrentNumberOfGroupMembers(); i++) {
 
 			final ExecutionVertex sourceVertex = source.getGroupMember(i);
@@ -531,8 +535,13 @@ public class ExecutionGraph implements ExecutionNotifiable {
 		// Add group vertex to initial execution stage
 		initialExecutionStage.addStageMember(groupVertex);
 
-		final ExecutionVertex ev = new ExecutionVertex(jobVertex.getJobGraph().getJobID(), invokableClass, this,
-			groupVertex);
+		ExecutionVertex ev = null;
+		try {
+			ev = new ExecutionVertex(jobVertex.getJobGraph().getJobID(), invokableClass, this,
+				groupVertex);
+		} catch (Exception e) {
+			throw new GraphConversionException(StringUtils.stringifyException(e));
+		}
 
 		// Run the configuration check the user has provided for the vertex
 		try {
@@ -573,7 +582,8 @@ public class ExecutionGraph implements ExecutionNotifiable {
 		groupVertex.setMaxMemberSize(maximumNumberOfSubtasks);
 
 		// Assign initial instance to vertex (may be overwritten later on when user settings are applied)
-		ev.setAllocatedResource(new AllocatedResource(DummyInstance.createDummyInstance(instanceType), null));
+		ev.setAllocatedResource(new AllocatedResource(DummyInstance.createDummyInstance(instanceType), instanceType,
+			null));
 
 		// Register input and output vertices separately
 		if (jobVertex instanceof JobInputVertex) {
@@ -881,7 +891,7 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	 */
 	public boolean isExecutionFinished() {
 
-		return (getJobStatus() == JobStatus.FINISHED);
+		return (getJobStatus() == InternalJobStatus.FINISHED);
 	}
 
 	public void prepareChannelsForExecution(ExecutionVertex executionVertex) throws ChannelSetupException {
@@ -982,144 +992,6 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	}
 
 	/**
-	 * Creates an exact (deep) copy of this execution graph.
-	 * 
-	 * @return an exact (deep) copy of this execution graph
-	 */
-	/*
-	 * public ExecutionGraph duplicateExecutionGraph() {
-	 * //First we copy the easy data structures
-	 * final ExecutionGraph duplicateGraph = new ExecutionGraph(this.jobID);
-	 * duplicateGraph.nextStageToExecute = this.nextStageToExecute;
-	 * //Copy execution stages
-	 * final Map<ExecutionGroupVertex, ExecutionGroupVertex> groupVertexMap = new HashMap<ExecutionGroupVertex,
-	 * ExecutionGroupVertex>();
-	 * final Map<ExecutionVertex, ExecutionVertex> executionVertexMap = new HashMap<ExecutionVertex, ExecutionVertex>();
-	 * for(int i = 0; i < this.stages.size(); i++) {
-	 * final ExecutionStage sourceStage = this.stages.get(i);
-	 * final ExecutionStage duplicateStage = new ExecutionStage(sourceStage.getStageNumber());
-	 * for(int j = 0; j < sourceStage.getNumberOfStageMembers(); j++) {
-	 * final ExecutionGroupVertex sourceGroupVertex = sourceStage.getStageMember(j);
-	 * final ExecutionGroupVertex duplicateGroupVertex = new ExecutionGroupVertex(sourceGroupVertex.getName(),
-	 * duplicateGraph,
-	 * sourceGroupVertex.getUserDefinedNumberOfMembers(),
-	 * sourceGroupVertex.getInstanceType(),
-	 * sourceGroupVertex.isInstanceTypeUserDefined(),
-	 * sourceGroupVertex.getNumberOfSubtasksPerInstance(),
-	 * sourceGroupVertex.isVertexToShareInstanceWithUserDefined(),
-	 * sourceGroupVertex.getConfiguration());
-	 * duplicateGroupVertex.setMinMemberSize(sourceGroupVertex.getMinimumNumberOfGroupMember());
-	 * duplicateGroupVertex.setMaxMemberSize(sourceGroupVertex.getMaximumNumberOfGroupMembers());
-	 * duplicateGroupVertex.setExecutionStage(duplicateStage);
-	 * duplicateGroupVertex.setInputSplits(sourceGroupVertex.getInputSplits());
-	 * groupVertexMap.put(sourceGroupVertex, duplicateGroupVertex);
-	 * for(int k = 0; k < sourceGroupVertex.getCurrentNumberOfGroupMembers(); k++) {
-	 * final ExecutionVertex sourceExecutionVertex = sourceGroupVertex.getGroupMember(k);
-	 * final ExecutionVertex duplicatedExecutionVertex = sourceExecutionVertex.duplicateVertex(true, false,
-	 * duplicateGroupVertex);
-	 * executionVertexMap.put(sourceExecutionVertex, duplicatedExecutionVertex);
-	 * }
-	 * duplicateStage.addStageMember(duplicateGroupVertex);
-	 * }
-	 * duplicateGraph.stages.add(duplicateStage);
-	 * }
-	 * //Recreate link structure between group vertices
-	 * final ExecutionGroupVertexIterator groupVertexIterator = new ExecutionGroupVertexIterator(this, true, -1);
-	 * while(groupVertexIterator.hasNext()) {
-	 * final ExecutionGroupVertex sourceGroupVertex = groupVertexIterator.next();
-	 * final ExecutionGroupVertex duplicateGroupVertex = groupVertexMap.get(sourceGroupVertex);
-	 * for(int i = 0; i < sourceGroupVertex.getNumberOfForwardLinks(); i++) {
-	 * final ExecutionGroupEdge edge = sourceGroupVertex.getForwardEdge(i);
-	 * final ExecutionGroupVertex sourceTargetGroupVertex = edge.getTargetVertex();
-	 * final ExecutionGroupVertex duplicateTargetGroupVertex = groupVertexMap.get(sourceTargetGroupVertex);
-	 * duplicateGroupVertex.wireTo(duplicateTargetGroupVertex, edge.getChannelType(), edge.isChannelTypeUserDefined(),
-	 * edge.getCompressionLevel(), edge.isCompressionLevelUserDefined());
-	 * }
-	 * }
-	 * //TODO: Copy vertices to share instances with
-	 * //TODO: Add deep copy of job configuration
-	 * //Copy input and output vertices
-	 * for(int i = 0; i < this.inputVertices.size(); i++) {
-	 * duplicateGraph.inputVertices.add(executionVertexMap.get(this.inputVertices.get(i)));
-	 * }
-	 * for(int i = 0; i < this.outputVertices.size(); i++) {
-	 * duplicateGraph.outputVertices.add(executionVertexMap.get(this.outputVertices.get(i)));
-	 * }
-	 * //Copy instanceMap
-	 * final Iterator<InstanceID> instanceIterator = this.instanceMap.keySet().iterator();
-	 * while(instanceIterator.hasNext()) {
-	 * final InstanceID instanceID = instanceIterator.next();
-	 * duplicateGraph.instanceMap.put(instanceID, this.instanceMap.get(instanceID));
-	 * }
-	 * //Now this is the messy part: Recreating the channels and their relationships
-	 * final ExecutionGraphIterator graphIterator = new ExecutionGraphIterator(this, true);
-	 * final Map<InputChannel<? extends Record>, InputChannel<? extends Record>> inputChannelMap = new
-	 * HashMap<InputChannel<? extends Record>, InputChannel<? extends Record>>();
-	 * final Map<OutputChannel<? extends Record>, OutputChannel<? extends Record>> outputChannelMap = new
-	 * HashMap<OutputChannel<? extends Record>, OutputChannel<? extends Record>>();
-	 * //Duplicate all the channels from the original graph
-	 * while(graphIterator.hasNext()) {
-	 * final ExecutionVertex sourceVertex = graphIterator.next();
-	 * final ExecutionVertex duplicatedVertex = executionVertexMap.get(sourceVertex);
-	 * for(int i = 0; i < sourceVertex.getEnvironment().getNumberOfInputGates(); i++) {
-	 * final InputGate<? extends Record> sourceInputGate = sourceVertex.getEnvironment().getInputGate(i);
-	 * final InputGate<? extends Record> duplicatedInputGate = duplicatedVertex.getEnvironment().getInputGate(i);
-	 * for(int j = 0; j < sourceInputGate.getNumberOfInputChannels(); j++) {
-	 * final InputChannel<? extends Record> sourceInputChannel = sourceInputGate.getInputChannel(j);
-	 * InputChannel<? extends Record> duplicatedInputChannel = null;
-	 * if(sourceInputChannel.getType() == ChannelType.FILE) {
-	 * duplicatedInputChannel = duplicatedInputGate.createFileInputChannel(sourceInputChannel.getID(),
-	 * sourceInputChannel.getCompressionLevel());
-	 * } else if(sourceInputChannel.getType() == ChannelType.NETWORK) {
-	 * duplicatedInputChannel = duplicatedInputGate.createNetworkInputChannel(sourceInputChannel.getID(),
-	 * sourceInputChannel.getCompressionLevel());
-	 * } else if(sourceInputChannel.getType() == ChannelType.INMEMORY) {
-	 * duplicatedInputChannel = duplicatedInputGate.createInMemoryInputChannel(sourceInputChannel.getID(),
-	 * sourceInputChannel.getCompressionLevel());
-	 * }
-	 * inputChannelMap.put(sourceInputChannel, duplicatedInputChannel);
-	 * duplicateGraph.inputChannelMap.put(duplicatedInputChannel.getID(), duplicatedInputChannel);
-	 * duplicateGraph.channelToVertexMap.put(duplicatedInputChannel.getID(), duplicatedVertex);
-	 * }
-	 * }
-	 * for(int i = 0; i < sourceVertex.getEnvironment().getNumberOfOutputGates(); i++) {
-	 * final OutputGate<? extends Record> sourceOutputGate = sourceVertex.getEnvironment().getOutputGate(i);
-	 * final OutputGate<? extends Record> duplicatedOutputGate = duplicatedVertex.getEnvironment().getOutputGate(i);
-	 * for(int j = 0; j < sourceOutputGate.getNumberOfOutputChannels(); j++) {
-	 * final OutputChannel<? extends Record> sourceOutputChannel = sourceOutputGate.getOutputChannel(j);
-	 * OutputChannel<? extends Record> duplicatedOutputChannel = null;
-	 * if(sourceOutputChannel.getType() == ChannelType.FILE) {
-	 * duplicatedOutputChannel = duplicatedOutputGate.createFileOutputChannel(sourceOutputChannel.getID(),
-	 * sourceOutputChannel.getCompressionLevel());
-	 * } else if(sourceOutputChannel.getType() == ChannelType.NETWORK) {
-	 * duplicatedOutputChannel = duplicatedOutputGate.createNetworkOutputChannel(sourceOutputChannel.getID(),
-	 * sourceOutputChannel.getCompressionLevel());
-	 * } else if(sourceOutputChannel.getType() == ChannelType.INMEMORY) {
-	 * duplicatedOutputChannel = duplicatedOutputGate.createInMemoryOutputChannel(sourceOutputChannel.getID(),
-	 * sourceOutputChannel.getCompressionLevel());
-	 * }
-	 * outputChannelMap.put(sourceOutputChannel, duplicatedOutputChannel);
-	 * duplicateGraph.outputChannelMap.put(duplicatedOutputChannel.getID(), duplicatedOutputChannel);
-	 * duplicateGraph.channelToVertexMap.put(duplicatedOutputChannel.getID(), duplicatedVertex);
-	 * }
-	 * }
-	 * }
-	 * //Now, finally connect all the channels
-	 * final Iterator<InputChannel<? extends Record>> channelIterator = inputChannelMap.keySet().iterator();
-	 * while(channelIterator.hasNext()) {
-	 * final InputChannel<? extends Record> sourceInputChannel = channelIterator.next();
-	 * final ChannelID sourceOutputChannelID = sourceInputChannel.getOutputChannelID();
-	 * final OutputChannel<? extends Record> sourceOutputChannel = this.outputChannelMap.get(sourceOutputChannelID);
-	 * final InputChannel<? extends Record> duplicatedInputChannel = inputChannelMap.get(sourceInputChannel);
-	 * final OutputChannel<? extends Record> duplicatedOutputChannel = outputChannelMap.get(sourceOutputChannel);
-	 * duplicatedInputChannel.setOutputChannelID(duplicatedOutputChannel.getID());
-	 * duplicatedOutputChannel.setInputChannelID(duplicatedInputChannel.getID());
-	 * }
-	 * return duplicateGraph;
-	 * }
-	 */
-
-	/**
 	 * Returns the index of the current execution stage.
 	 * 
 	 * @return the index of the current execution stage
@@ -1128,6 +1000,11 @@ public class ExecutionGraph implements ExecutionNotifiable {
 		return this.indexToCurrentExecutionStage;
 	}
 
+	/**
+	 * Returns the stage which is currently executed.
+	 * 
+	 * @return the currently executed stage or <code>null</code> if the job execution is already completed
+	 */
 	public ExecutionStage getCurrentExecutionStage() {
 
 		if (this.indexToCurrentExecutionStage >= this.stages.size()) {
@@ -1138,23 +1015,45 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	}
 
 	/**
-	 * Returns the types and numbers of instances which are required for the
-	 * current execution stage to complete.
+	 * Checks which instance types and how many instances of these types are required to execute the current stage
+	 * of this job graph. The required instance types and the number of instances are collected in the given map. Note
+	 * that this method does not clear the map before collecting the instances.
 	 * 
-	 * @return a map containing the types and respective numbers of instances required
-	 *         for the current execution stage to complete.
+	 * @param instanceTypeMap
+	 *        the map containing the instances types and the required number of instances of the respective type
+	 * @param executionState
+	 *        the execution state the considered vertices must be in
 	 */
-	public Map<InstanceType, Integer> getInstanceTypesRequiredForCurrentStage() {
+	public void collectInstanceTypesRequiredForCurrentStage(final Map<InstanceType, Integer> instanceTypeMap,
+			final ExecutionState executionState) {
 
-		final Map<InstanceType, Integer> instanceTypeMap = new HashMap<InstanceType, Integer>();
+		collectInstanceTypesRequiredForStage(this.indexToCurrentExecutionStage, instanceTypeMap, executionState);
+	}
 
-		if (this.indexToCurrentExecutionStage >= this.stages.size()) {
-			return instanceTypeMap;
+	/**
+	 * Checks which instance types and how many instances of these types are required to execute the given stage
+	 * of this job graph. The required instance types and the number of instances are collected in the given map. Note
+	 * that this method does not clear the map before collecting the instances.
+	 * 
+	 * @param stage
+	 *        the stage in which the required instance types are collected.
+	 * @param instanceTypeMap
+	 *        the map containing the instances types and the required number of instances of the respective type
+	 * @param executionState
+	 *        the execution state the considered vertices must be in
+	 */
+	public void collectInstanceTypesRequiredForStage(final int stage, final Map<InstanceType, Integer> instanceTypeMap,
+			final ExecutionState executionState) {
+
+		if (stage >= this.stages.size()) {
+			LOG.error("Illegal stage  " + stage + " requested");
+			return;
 		}
 
 		final ExecutionStage nextStage = this.stages.get(this.indexToCurrentExecutionStage);
 		if (nextStage == null) {
-			LOG.warn("Stage " + this.indexToCurrentExecutionStage + " is not a valid execution stage");
+			LOG.error("Stage " + stage + " is not a valid execution stage");
+			return;
 		}
 
 		final Set<AbstractInstance> collectedInstances = new HashSet<AbstractInstance>();
@@ -1165,7 +1064,7 @@ public class ExecutionGraph implements ExecutionNotifiable {
 			for (int j = 0; j < groupVertex.getCurrentNumberOfGroupMembers(); j++) {
 				// Get the instance type from the execution vertex if it
 				final ExecutionVertex vertex = groupVertex.getGroupMember(j);
-				if (vertex.getExecutionState() == ExecutionState.SCHEDULED) {
+				if (vertex.getExecutionState() == executionState) {
 					final AbstractInstance instance = vertex.getAllocatedResource().getInstance();
 
 					if (collectedInstances.contains(instance)) {
@@ -1176,7 +1075,7 @@ public class ExecutionGraph implements ExecutionNotifiable {
 
 					if (instance instanceof DummyInstance) {
 						Integer num = instanceTypeMap.get(instance.getType());
-						num = (num == null) ? new Integer(1) : new Integer(num.intValue() + 1);
+						num = (num == null) ? Integer.valueOf(1) : Integer.valueOf(num.intValue() + 1);
 						instanceTypeMap.put(instance.getType(), num);
 					} else {
 						LOG.debug("Execution Vertex " + vertex.getName() + " (" + vertex.getID()
@@ -1185,8 +1084,6 @@ public class ExecutionGraph implements ExecutionNotifiable {
 				}
 			}
 		}
-
-		return instanceTypeMap;
 	}
 
 	public void repairStages() {
@@ -1201,7 +1098,7 @@ public class ExecutionGraph implements ExecutionNotifiable {
 			if (stageNumbers.containsKey(groupVertex)) {
 				precedingNumber = stageNumbers.get(groupVertex).intValue();
 			} else {
-				stageNumbers.put(groupVertex, new Integer(precedingNumber));
+				stageNumbers.put(groupVertex, Integer.valueOf(precedingNumber));
 			}
 
 			for (int i = 0; i < groupVertex.getNumberOfForwardLinks(); i++) {
@@ -1211,10 +1108,10 @@ public class ExecutionGraph implements ExecutionNotifiable {
 					// Target vertex has not yet been discovered
 					if (edge.getChannelType() != ChannelType.FILE) {
 						// Same stage as preceding vertex
-						stageNumbers.put(edge.getTargetVertex(), new Integer(precedingNumber));
+						stageNumbers.put(edge.getTargetVertex(), Integer.valueOf(precedingNumber));
 					} else {
 						// File channel, increase stage of target vertex by one
-						stageNumbers.put(edge.getTargetVertex(), new Integer(precedingNumber + 1));
+						stageNumbers.put(edge.getTargetVertex(), Integer.valueOf(precedingNumber + 1));
 					}
 				} else {
 					final int stageNumber = stageNumbers.get(edge.getTargetVertex()).intValue();
@@ -1247,7 +1144,7 @@ public class ExecutionGraph implements ExecutionNotifiable {
 				final int stageNumber = stageNumbers.get(edge.getSourceVertex());
 				if (edge.getChannelType() == ChannelType.FILE) {
 					if (stageNumber < (succeedingNumber - 1)) {
-						stageNumbers.put(edge.getSourceVertex(), new Integer(succeedingNumber - 1));
+						stageNumbers.put(edge.getSourceVertex(), Integer.valueOf(succeedingNumber - 1));
 					}
 				} else {
 					if (stageNumber != succeedingNumber) {
@@ -1260,11 +1157,12 @@ public class ExecutionGraph implements ExecutionNotifiable {
 
 		// Finally, assign the new stage numbers
 		this.stages.clear();
-		final Iterator<ExecutionGroupVertex> it2 = stageNumbers.keySet().iterator();
+		final Iterator<Map.Entry<ExecutionGroupVertex, Integer>> it2 = stageNumbers.entrySet().iterator();
 		while (it2.hasNext()) {
 
-			final ExecutionGroupVertex groupVertex = it2.next();
-			final int stageNumber = stageNumbers.get(groupVertex).intValue();
+			final Map.Entry<ExecutionGroupVertex, Integer> entry = it2.next();
+			final ExecutionGroupVertex groupVertex = entry.getKey();
+			final int stageNumber = entry.getValue().intValue();
 			// Prevent out of bounds exceptions
 			while (this.stages.size() <= stageNumber) {
 				this.stages.add(null);
@@ -1362,25 +1260,6 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	}
 
 	/**
-	 * Checks whether the job represented by the execution graph has the status <code>CREATED</code>.
-	 * 
-	 * @return <code>true</code> if the job has the status <code>CREATED</code>, <code>false</code> otherwise
-	 */
-	private boolean jobHasCreatedStatus() {
-
-		final Iterator<ExecutionVertex> it = new ExecutionGraphIterator(this, true);
-
-		while (it.hasNext()) {
-
-			if (it.next().getExecutionState() != ExecutionState.CREATED) {
-				return false;
-			}
-		}
-
-		return true;
-	}
-
-	/**
 	 * Checks whether the job represented by the execution graph has the status <code>FINISHED</code>.
 	 * 
 	 * @return <code>true</code> if the job has the status <code>CREATED</code>, <code>false</code> otherwise
@@ -1397,27 +1276,6 @@ public class ExecutionGraph implements ExecutionNotifiable {
 		}
 
 		return true;
-	}
-
-	/**
-	 * Checks whether the job represented by the execution graph has the status <code>FAILED</code>.
-	 * 
-	 * @return <code>true</code> if the job has the status <code>FAILED</code>, <code>false</code> otherwise
-	 */
-	private boolean jobHasFailedStatus() {
-
-		final Iterator<ExecutionVertex> it = new ExecutionGraphIterator(this, true);
-
-		while (it.hasNext()) {
-
-			final ExecutionVertex ev = it.next();
-
-			if (ev.getExecutionState() == ExecutionState.FAILED && !ev.hasRetriesLeft()) {
-				return true;
-			}
-		}
-
-		return false;
 	}
 
 	/**
@@ -1442,17 +1300,21 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	}
 
 	/**
-	 * Checks whether the job represented by the execution graph has the status <code>CANCELED</code>.
+	 * Checks whether the job represented by the execution graph has the status <code>CANCELED</code> or
+	 * <code>FAILED</code>.
 	 * 
-	 * @return <code>true</code> if the job has the status <code>CANCELED</code>, <code>false</code> otherwise
+	 * @return <code>true</code> if the job has the status <code>CANCELED</code> or <code>FAILED</code>,
+	 *         <code>false</code> otherwise
 	 */
-	private boolean jobHasCanceledStatus() {
+	private boolean jobHasFailedOrCanceledStatus() {
 
 		final Iterator<ExecutionVertex> it = new ExecutionGraphIterator(this, true);
 
 		while (it.hasNext()) {
 
-			if (it.next().getExecutionState() != ExecutionState.CANCELLED) {
+			final ExecutionState state = it.next().getExecutionState();
+
+			if (state != ExecutionState.CANCELED && state != ExecutionState.FAILED && state != ExecutionState.FINISHED) {
 				return false;
 			}
 		}
@@ -1463,36 +1325,65 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	/**
 	 * Checks and updates the current execution status of the
 	 * job which is represented by this execution graph.
+	 * 
+	 * @param latestStateChange
+	 *        the latest execution state change which occurred
 	 */
-	public synchronized void checkAndUpdateJobStatus() {
+	public synchronized void checkAndUpdateJobStatus(final ExecutionState latestStateChange) {
 
-		if (jobHasCreatedStatus()) {
-			this.jobStatus = JobStatus.CREATED;
-			return;
+		switch (this.jobStatus) {
+		case CREATED:
+			if (jobHasScheduledStatus()) {
+				this.jobStatus = InternalJobStatus.SCHEDULED;
+			}
+			break;
+		case SCHEDULED:
+			if (latestStateChange == ExecutionState.RUNNING) {
+				this.jobStatus = InternalJobStatus.RUNNING;
+				return;
+			}
+			break;
+		case RUNNING:
+			if (latestStateChange == ExecutionState.CANCELING || latestStateChange == ExecutionState.CANCELED) {
+				this.jobStatus = InternalJobStatus.CANCELING;
+				return;
+			}
+			if (latestStateChange == ExecutionState.FAILED) {
+
+				final Iterator<ExecutionVertex> it = new ExecutionGraphIterator(this, true);
+				while (it.hasNext()) {
+
+					final ExecutionVertex vertex = it.next();
+					if (vertex.getExecutionState() == ExecutionState.FAILED && !vertex.hasRetriesLeft()) {
+						this.jobStatus = InternalJobStatus.FAILING;
+						return;
+					}
+				}
+			}
+			if (jobHasFinishedStatus()) {
+				this.jobStatus = InternalJobStatus.FINISHED;
+			}
+			break;
+		case FAILING:
+			if (jobHasFailedOrCanceledStatus()) {
+				this.jobStatus = InternalJobStatus.FAILED;
+			}
+			break;
+		case FAILED:
+			LOG.error("Received update of execute state in job status FAILED");
+			break;
+		case CANCELING:
+			if (jobHasFailedOrCanceledStatus()) {
+				this.jobStatus = InternalJobStatus.CANCELED;
+			}
+			break;
+		case CANCELED:
+			LOG.error("Received update of execute state in job status CANCELED");
+			break;
+		case FINISHED:
+			LOG.error("Received update of execute state in job status FINISHED");
+			break;
 		}
-
-		if (jobHasScheduledStatus()) {
-			this.jobStatus = JobStatus.SCHEDULED;
-			return;
-		}
-
-		if (jobHasCanceledStatus()) {
-			this.jobStatus = JobStatus.CANCELLED;
-			return;
-		}
-
-		if (jobHasFinishedStatus()) {
-			this.jobStatus = JobStatus.FINISHED;
-			return;
-		}
-
-		if (jobHasFailedStatus()) {
-			this.jobStatus = JobStatus.FAILED;
-			return;
-		}
-
-		this.jobStatus = JobStatus.RUNNING;
-
 	}
 
 	/**
@@ -1501,7 +1392,7 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	 * 
 	 * @return the current status of the job
 	 */
-	public synchronized JobStatus getJobStatus() {
+	public synchronized InternalJobStatus getJobStatus() {
 		return this.jobStatus;
 	}
 
@@ -1512,8 +1403,9 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	public synchronized void executionStateChanged(Environment ee, ExecutionState newExecutionState,
 			String optionalMessage) {
 
-		final JobStatus oldStatus = this.jobStatus;
-		checkAndUpdateJobStatus();
+		final InternalJobStatus oldStatus = this.jobStatus;
+
+		checkAndUpdateJobStatus(newExecutionState);
 
 		if (newExecutionState == ExecutionState.FINISHED) {
 			// It is worth checking if the current stage has complete
@@ -1525,9 +1417,19 @@ public class ExecutionGraph implements ExecutionNotifiable {
 
 		if (this.jobStatus != oldStatus) {
 
+			// The task caused the entire job to fail, save the error description
+			if (this.jobStatus == InternalJobStatus.FAILING) {
+				this.errorDescription = optionalMessage;
+			}
+
+			// If this is the final failure state change, reuse the saved error description
+			if (this.jobStatus == InternalJobStatus.FAILED) {
+				optionalMessage = this.errorDescription;
+			}
+
 			final Iterator<JobStatusListener> it = this.jobStatusListeners.iterator();
 			while (it.hasNext()) {
-				it.next().jobStatusHasChanged(this.jobID, this.jobStatus);
+				it.next().jobStatusHasChanged(this, this.jobStatus, optionalMessage);
 			}
 		}
 	}
@@ -1592,5 +1494,35 @@ public class ExecutionGraph implements ExecutionNotifiable {
 	@Override
 	public void userThreadStarted(Environment ee, Thread userThread) {
 		// Nothing to do here
+	}
+
+	/**
+	 * Returns a list of vertices which are contained in this execution graph and have a finished checkpoint.
+	 * 
+	 * @return list of vertices which are contained in this execution graph and have a finished checkpoint
+	 */
+	public List<ExecutionVertex> getVerticesWithCheckpoints() {
+
+		final List<ExecutionVertex> list = new ArrayList<ExecutionVertex>();
+		final Iterator<ExecutionGroupVertex> it = new ExecutionGroupVertexIterator(this, true, -1);
+
+		// In the current implementation we just look for vertices which have outgoing file channels
+		while (it.hasNext()) {
+
+			final ExecutionGroupVertex groupVertex = it.next();
+			for (int i = 0; i < groupVertex.getNumberOfForwardLinks(); i++) {
+
+				if (groupVertex.getForwardEdge(i).getChannelType() == ChannelType.FILE) {
+
+					for (int j = 0; j < groupVertex.getCurrentNumberOfGroupMembers(); j++) {
+						list.add(groupVertex.getGroupMember(j));
+					}
+
+					break;
+				}
+			}
+		}
+
+		return list;
 	}
 }
